src/parser/src/snapshots/parser__tests__expr_stmt-2.snap
---
source: src/lib.rs
expression: parse_statement(input)
---
Stmt {
    id: NodeId(
        0,
    ),
    kind: Expr(
        Expr {
            id: NodeId(
                0,
            ),
            kind: Lit(
                Lit {
                    span: Span {
                        start: ByteIndex(0),
                        end: ByteIndex(5),
                    },
                    kind: Number(
                        40.02,
                    ),
                },
            ),
            span: Span {
                start: ByteIndex(0),
                end: ByteIndex(5),
            },
            ty: None,
        },
    ),
    span: Span {
        start: ByteIndex(0),
        end: ByteIndex(5),
    },
    has_semi: false,
}
