src/parser/src/snapshots/parser__tests__expr_stmt-3.snap
---
source: src/lib.rs
expression: parse_statement(input)
---
Stmt {
    id: NodeId(
        0,
    ),
    kind: Expr(
        Expr {
            id: NodeId(
                0,
            ),
            kind: Lit(
                Lit {
                    span: Span {
                        start: ByteIndex(0),
                        end: ByteIndex(7),
                    },
                    kind: Str(
                        "Hello",
                    ),
                },
            ),
            span: Span {
                start: ByteIndex(0),
                end: ByteIndex(7),
            },
            ty: None,
        },
    ),
    span: Span {
        start: ByteIndex(0),
        end: ByteIndex(7),
    },
    has_semi: false,
}
