src/parser/src/snapshots/parser__tests__expr_stmt-4.snap
---
source: src/lib.rs
expression: parse_statement(input)
---
Stmt {
    id: NodeId(
        0,
    ),
    kind: Expr(
        Expr {
            id: NodeId(
                0,
            ),
            kind: Array(
                [
                    Expr {
                        id: NodeId(
                            0,
                        ),
                        kind: Lit(
                            Lit {
                                span: Span {
                                    start: ByteIndex(1),
                                    end: ByteIndex(2),
                                },
                                kind: Number(
                                    1,
                                ),
                            },
                        ),
                        span: Span {
                            start: ByteIndex(1),
                            end: ByteIndex(2),
                        },
                        ty: None,
                    },
                    Expr {
                        id: NodeId(
                            0,
                        ),
                        kind: Lit(
                            Lit {
                                span: Span {
                                    start: ByteIndex(4),
                                    end: ByteIndex(5),
                                },
                                kind: Number(
                                    2,
                                ),
                            },
                        ),
                        span: Span {
                            start: ByteIndex(4),
                            end: ByteIndex(5),
                        },
                        ty: None,
                    },
                    Expr {
                        id: NodeId(
                            0,
                        ),
                        kind: Lit(
                            Lit {
                                span: Span {
                                    start: ByteIndex(7),
                                    end: ByteIndex(10),
                                },
                                kind: Str(
                                    "3",
                                ),
                            },
                        ),
                        span: Span {
                            start: ByteIndex(7),
                            end: ByteIndex(10),
                        },
                        ty: None,
                    },
                ],
            ),
            span: Span {
                start: ByteIndex(0),
                end: ByteIndex(11),
            },
            ty: None,
        },
    ),
    span: Span {
        start: ByteIndex(0),
        end: ByteIndex(11),
    },
    has_semi: false,
}
